@@ -175,7 +175,9 @@ Instance methods:
     database.
 
     sql_type is using the `_sql_type` attribute to compute its return value.
-    The backend is responsible for the computation.
+    The backend is responsible for the computation using usually its
+    `TYPES_MAPPING` attribute mapping an actual SQL Type to the named tuple
+    related to the database.
 
     For the list of supported types by Tryton see 
     :ref:`backend types <topics-backend_types>`.
